cmake_minimum_required(VERSION 3.5)
project(pb_rw_file)
set(CMAKE_CXX_STANDARD 11)
find_package(Protobuf REQUIRED)
link_libraries(${Protobuf_LIBRARIES})
include_directories(${CMAKE_CURRENT_BINARY_DIR})
protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS pb_rw_file.proto)
add_executable(pb_rw_file)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} ALL_SRC)
target_sources(pb_rw_file PRIVATE ${ALL_SRC} ${PROTO_SRCS} ${PROTO_HDRS})
install(TARGETS pb_rw_file RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
