cmake_minimum_required(VERSION 3.5)
project(protobuf_rw_file)
set(CMAKE_CXX_STANDARD 11)
find_package(Protobuf REQUIRED)
link_libraries(${Protobuf_LIBRARIES})
include_directories(${CMAKE_CURRENT_BINARY_DIR})
protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS protobuf_rw_file.proto)
add_executable(protobuf_rw_file)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} ALL_SRC)
target_sources(protobuf_rw_file PRIVATE ${ALL_SRC} ${PROTO_SRCS} ${PROTO_HDRS})
install(TARGETS protobuf_rw_file RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
